<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="label_favorites">Favorites</string>
    <string name="label_by_game">Browse by game</string>
    <string name="label_by_composer">Browse by composer</string>
    <string name="label_all_songs">Browse all songs</string>
    <string name="label_by_tag">Browse by tag</string>
    <string name="label_random">Random select</string>
    <string name="label_random_loading">Finding a random sheet...</string>
    <string name="label_jams">Jam sessions</string>
    <string name="label_refresh">Check for updates</string>
    <string name="label_refresh_loading">Checking for updates...</string>
    <string name="label_refresh_date">Updated %1$s</string>

    <string name="label_song_details">Show song details</string>
    <string name="label_youtube">Find song on YouTube</string>
    <string name="label_jam_name">Following Jam: %1$s</string>
    <string name="label_jam_no_song">No song selected</string>
    <string name="label_jam_current_song">Go to current song</string>
    <string name="label_jam_unfollow">Unfollow Jam</string>
    <string name="label_favorite">Add to Favorites</string>
    <string name="label_unfavorite">Remove from Favorites</string>
    <string name="label_add_offline">Make Available Offline</string>
    <string name="label_remove_offline">Available Offline</string>
    <string name="label_show_alt">Show musician-friendly sheet</string>
    <string name="label_hide_alt">Show standard sheet</string>

    <string name="date_never">Never</string>
    <string name="label_settings">Settings</string>
    <string name="jam_cancelled">No longer following Jam.</string>
    <string name="label_perf">Performance Details</string>
    <string name="label_debug">Debug Menu</string>
    <string name="cd_search_menu">Open Menu</string>
    <string name="cd_search_back">Go Back</string>
    <string name="cd_search_close">Close Menu</string>

    <string name="label_perf_stage_view_created">View Created</string>
    <string name="label_perf_stage_title_loaded">Title Loaded</string>
    <string name="label_perf_stage_transition_start">Transition Started</string>
    <string name="label_perf_stage_partial_content">Content Partially Loaded</string>
    <string name="label_perf_stage_full_content">Content Fully Loaded</string>
    <string name="label_perf_stage_cancelled">Cancelled</string>
    <string name="label_perf_stage_completed">Completed</string>

    <string name="label_perf_stats_for">Screen</string>
    <string name="label_perf_summary">Summary</string>
    <string name="label_perf_load_times">Load Times</string>
    <string name="label_perf_frame_times">Frame Times</string>
    <string name="label_perf_invalidates">Invalidates</string>

    <string name="label_perf_total">Total</string>
    <string name="label_perf_jank">Slow</string>
    <string name="label_perf_total_time">Total Time</string>
    <string name="label_perf_median">Median Time</string>
    <string name="label_perf_five">95th Percentile Time</string>
    <string name="label_perf_nine">99th Percentile Time</string>

    <string name="label_perf_empty_load_times">No load times recorded.</string>
    <string name="label_perf_empty_frame_times">No frame times recorded.</string>
    <string name="label_perf_empty_invalidates">No invalidates recorded.</string>

    <string name="value_perf_summary_completion">After %1$d ms</string>
    <string name="value_perf_summary_frame_drops">%1$d of %2$d janky</string>
    <string name="value_perf_summary_invalidate">%1$d of %2$d slow</string>

    <string name="value_perf_ms">%1$d ms</string>

    <string name="search_label_type_game">Game</string>
    <string name="search_label_type_composer">Composer</string>
    <string name="search_label_type_song">Song</string>
    <string name="search_label_sheet_count">%1$d Sheets</string>

    <string name="search_sample_text_result">Baden National Golf Course</string>
    <string name="search_sample_text_result_type">Song</string>

    <string name="search_section_header_games">Games</string>
    <string name="search_section_header_songs">Songs</string>
    <string name="search_section_header_composers">Composers</string>

    <string name="search_cta_more">Show %1$d more %2$s… </string>

    <string name="search_empty_search_no_results">No results found. Try a different search term.</string>
    <string name="search_empty_no_query">Use the text box to search by title, game, or composer.</string>

    <string name="search_error_search_stickerbrush">Did you know the song is called \"Stickerbush Symphony\"? Yeah. \"Stickerbrush\" isn\'t a word.</string>

    <string name="search_subtitle_suffix_others">" and %1$d more…"</string>
    <string name="search_subtitle_separator">", "</string>
    <string name="search_now_loading">Please wait, now loading…</string>

    <string name="part_mid_c">C Instr.</string>
    <string name="part_mid_b">B♭ Instr.</string>
    <string name="part_mid_e">E♭ Instr.</string>
    <string name="part_mid_f">F Instr.</string>
    <string name="part_mid_g">G Instr.</string>
    <string name="part_mid_alto">Alto Clef</string>
    <string name="part_mid_bass">Bass Clef</string>
    <string name="part_mid_vocal">Vocals</string>
    <string name="part_long_c">C Instruments</string>
    <string name="part_long_b">B♭ Instruments</string>
    <string name="part_long_e">E♭ Instruments</string>
    <string name="part_long_f">F Instruments</string>
    <string name="part_long_g">G Instruments</string>
    <string name="part_long_alto">Alto Clef</string>
    <string name="part_long_bass">Bass Clef</string>
    <string name="part_long_vocal">Vocalists</string>
</resources>
